// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-kubernetes - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Plan and create production-ready Azure Kubernetes Service (AKS) clusters. Covers Day-0 decisions (networking, API server access, pod IP model), Day-1 configuration (identity, secrets, governance, observability), cluster SKUs (Automatic vs Standard), workload identity, Key Vault CSI, Azure Policy, deployment safeguards, monitoring with Prometheus/Grafana, upgrade strategies, and cost analysis. USE FOR: create AKS cluster, AKS cluster planning, AKS networking design, security design, upgrade settings, autoscaling, AKS monitoring, AKS cost analysis, AKS production best practices, AKS Automatic vs Standard, AKS add-ons. DO NOT USE FOR: debugging AKS issues (use azure-diagnostics), deploying applications to AKS (use azure-deploy), creating other Azure resources (use azure-prepare), setting up general monitoring (use azure-observability), general cost optimization strategies (use azure-cost-optimization).",
  "extractedKeywords": [
    "access",
    "add-ons",
    "aks",
    "analysis",
    "applications",
    "automatic",
    "autoscaling",
    "azure",
    "azure-cost-optimization",
    "azure-deploy",
    "azure-diagnostics",
    "azure-observability",
    "azure-prepare",
    "best",
    "bicep",
    "cli",
    "cluster",
    "clusters",
    "configuration",
    "container",
    "cost",
    "covers",
    "create",
    "creating",
    "day-0",
    "day-1",
    "debugging",
    "decisions",
    "deploy",
    "deploying",
    "deployment",
    "design",
    "diagnostic",
    "entra",
    "general",
    "governance",
    "grafana",
    "identity",
    "issues",
    "key vault",
    "kubernetes",
    "mcp",
    "model",
    "monitor",
    "monitoring",
    "networking",
    "observability",
    "optimization",
    "other",
    "plan",
    "planning",
    "policy",
    "practices",
    "production",
    "production-ready",
    "prometheus",
    "rbac",
    "resources",
    "safeguards",
    "secrets",
    "security",
    "server",
    "service",
    "setting",
    "settings",
    "skus",
    "standard",
    "strategies",
    "terraform",
    "upgrade",
    "vault",
    "with",
    "workload",
  ],
  "name": "azure-kubernetes",
}
`;

exports[`azure-kubernetes - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "access",
  "add-ons",
  "aks",
  "analysis",
  "applications",
  "automatic",
  "autoscaling",
  "azure",
  "azure-cost-optimization",
  "azure-deploy",
  "azure-diagnostics",
  "azure-observability",
  "azure-prepare",
  "best",
  "bicep",
  "cli",
  "cluster",
  "clusters",
  "configuration",
  "container",
  "cost",
  "covers",
  "create",
  "creating",
  "day-0",
  "day-1",
  "debugging",
  "decisions",
  "deploy",
  "deploying",
  "deployment",
  "design",
  "diagnostic",
  "entra",
  "general",
  "governance",
  "grafana",
  "identity",
  "issues",
  "key vault",
  "kubernetes",
  "mcp",
  "model",
  "monitor",
  "monitoring",
  "networking",
  "observability",
  "optimization",
  "other",
  "plan",
  "planning",
  "policy",
  "practices",
  "production",
  "production-ready",
  "prometheus",
  "rbac",
  "resources",
  "safeguards",
  "secrets",
  "security",
  "server",
  "service",
  "setting",
  "settings",
  "skus",
  "standard",
  "strategies",
  "terraform",
  "upgrade",
  "vault",
  "with",
  "workload",
]
`;
